# VisionStimulusEngine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
benches/: frame_timing.rs
crates/vse-bevy/: Cargo.toml
crates/vse-bevy/examples/: 01_bevy_ring_demo.rs  02_verify_determinism.rs  03_async_latest_ready_demo.rs
crates/vse-bevy/src/: lib.rs  ring_alloc.rs  scene.rs
crates/vse-external-frame/: Cargo.toml
crates/vse-external-frame/src/: format.rs  lib.rs  ring.rs
docs/: 3d-vr-rendering-landscape.md  clock-synchronization.md  gpu-vendor-selection.md  host-logging.md  timing-roadmap.md  timing.md  upstream-watch.md
docs/debugging/: direct_display_vt_restoration.md
docs/guides/: buffered_flips.md  data_recording.md  display_backends.md  experiment_data_schema.md  external_rendering_timing.md  pipelines.md  window_modes_and_input.md
docs/plans/: 2026-02-15-timing-precision-design.md  2026-02-15-timing-precision-impl.md  2026-02-16-advanced-stimuli-design.md  2026-02-16-advanced-stimuli-plan.md  2026-02-16-host-logging-design.md  2026-02-16-host-logging-impl.md  2026-02-28-direct-display-mode-design.md  2026-02-28-direct-display-mode-impl.md  2026-02-28-window-modes-input-design.md  2026-02-28-window-modes-input-plan.md  2026-03-01-timing-data-design.md  2026-03-01-timing-data-impl.md  2026-03-02-buffered-flips-design.md  2026-03-02-buffered-flips-impl.md  2026-07-09-3d-vr-rendering-landscape.md  2026-07-09-ext-present-timing-design.md  2026-07-09-ext-present-timing-next-session.md  2026-07-09-ext-present-timing-subsystem-b.md  2026-07-09-ext-present-timing-subsystem-b3.md  2026-07-12-semaphore-raw-vulkan-init-next-session.md  Introduction.md  Phase2_Timing.md  Phase3_Drawing.md  ProjectPlan.md
examples/: 00_clear_color.rs  01_timing_validation.rs  02_calibration_square.rs  03_gabor_demo.rs  04_scheduled_flip.rs  05_advanced_stimuli.rs  05_image_scaling.rs  06_host_info.rs  07_fullscreen_input.rs  08_direct_display.rs  09_present_clock_drift.rs  10_host_clock_bridge.rs  11_raw_present_feedback.rs  12_buffered_present_id.rs  13_direct_display_scanout.rs  14_metacontrast_masking.rs  plot_metacontrast.py
planning/: Phase1_Foundation.md  ProjectPlan.md
src/: lib.rs
src/core/: buffered.rs  config.rs  context.rs  device.rs  direct_display.rs  direct_loop.rs  evdev_input.rs  event_loop.rs  external_frame.rs  flip.rs  frame.rs  init.rs  input.rs  mod.rs  present_engine.rs  present_timing_ext.rs  render_context.rs  state.rs  swapchain.rs
src/data/: csv_writer.rs  messages.rs  mod.rs  parquet_writer.rs  session.rs  writer.rs
src/drawing/: color.rs  gabor.rs  mod.rs  noise.rs  primitives.rs  renderer.rs  stimuli.rs  texture.rs  vertex.rs
src/host/: capture.rs  edid.rs  host_info.rs  mod.rs
src/shaders/: dot.frag  dot.vert  flat_color.frag  flat_color.vert  gabor.frag  grating.frag  parametric.vert  textured.frag  textured.vert
src/timing/: bridge.rs  clock.rs  flip_info.rs  flip_logger.rs  mod.rs  provider.rs  stats.rs  timing_source.rs
tests/: buffered_flips.rs  core_tests.rs
