[package]
name = "vision_stimulus_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A vision science stimulus presentation system built on Vulkan"
license = "MIT"
authors = ["Ryan A. Ressmeyer"]

[dependencies]
# Vulkan abstraction - Core rendering
vulkano = "0.34"

# Windowing and event handling
winit = { version = "0.29", features = ["rwh_05"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (helps with debugging Vulkan initialization)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing utilities
criterion = "0.5"

[[example]]
name = "00_clear_color"
path = "examples/00_clear_color.rs"

[[bench]]
name = "frame_timing"
harness = false

[profile.dev]
# Faster builds during development
opt-level = 1

[profile.release]
# Maximum optimization for timing-critical code
opt-level = 3
lto = true
codegen-units = 1
