[package]
name = "vision_stimulus_engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A vision science stimulus presentation system built on Vulkan"
license = "MIT"
authors = ["Ryan A. Ressmeyer"]

[dependencies]
# Vulkan abstraction - Core rendering
vulkano = "0.35"

# Windowing and event handling
winit = "0.29"

# Raw window handle for display backend detection
raw-window-handle = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging (helps with debugging Vulkan initialization)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Shader compilation at build time
vulkano-shaders = "0.35"

# Raw Vulkan bindings for extension access (VK_EXT_present_timing family,
# VK_KHR_display); the present-timing 1.4 structs are hand-declared in
# src/core/present_timing_ext.rs since ash 0.38 predates them.
ash = "0.38"

# Image loading for textures
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# System information for host logging
sysinfo = "0.33"

# Deterministic RNG for noise generation
rand = "0.8"
rand_chacha = "0.3"

# FFT for pink noise spectrum filtering
rustfft = "6.2"

# JSON serialization for host info export
serde_json = "1.0"

# Parquet/Arrow for columnar data output
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow"] }
serde_arrow = { version = "0.12", features = ["arrow-53"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Direct input device access for direct display mode
evdev = "0.12"
# Runtime dynamic loading for optional X11 acquisition path
libloading = "0.8"
# Clean SIGINT (Ctrl+C) handling for direct display mode
ctrlc = "3"
# fcntl O_NONBLOCK for evdev devices and KDSETMODE for VT restoration
libc = "0.2"

[dev-dependencies]
# Testing utilities
criterion = "0.5"

[[example]]
name = "00_clear_color"
path = "examples/00_clear_color.rs"

[[example]]
name = "01_timing_validation"
path = "examples/01_timing_validation.rs"

[[example]]
name = "02_calibration_square"
path = "examples/02_calibration_square.rs"

[[example]]
name = "03_gabor_demo"
path = "examples/03_gabor_demo.rs"

[[example]]
name = "04_scheduled_flip"
path = "examples/04_scheduled_flip.rs"

[[example]]
name = "05_advanced_stimuli"
path = "examples/05_advanced_stimuli.rs"

[[example]]
name = "06_host_info"
path = "examples/06_host_info.rs"

[[example]]
name = "07_fullscreen_input"
path = "examples/07_fullscreen_input.rs"

[[example]]
name = "08_direct_display"
path = "examples/08_direct_display.rs"

[[bench]]
name = "frame_timing"
harness = false

[profile.dev]
# Faster builds during development
opt-level = 1

[profile.release]
# Maximum optimization for timing-critical code
opt-level = 3
lto = true
codegen-units = 1
